# unixcw

./: .gitignore  AUTHORS  ChangeLog  HISTORY  INSTALL  Makefile.am  Makefile.in  Makefile.inc.in  NEWS  README  THANKS  TODO  configure  configure.ac  icon_unixcw.xpm  unixcw-2.3.spec  unixcw-3.4.2.lsm
debian/: README.debian  changelog  control  copyright  cw.config  cw.install  cw.postinst  cw.postrm  cw.prebuild  cw.preinst  cw.templates  cwcp.config  cwcp.install  cwcp.menu  cwcp.postinst  cwcp.postrm  cwcp.prebuild  cwcp.preinst  cwcp.templates  icon_xcwcp.xpm  libcw6-dev.install  libcw6.dirs  libcw6.install  rules  watch  xcwcp.config  xcwcp.install  xcwcp.menu  xcwcp.postinst  xcwcp.postrm  xcwcp.prebuild  xcwcp.preinst  xcwcp.templates
debian/po/: POTFILES.in  ast.po  cs.po  da.po  de.po  es.po  fr.po  id.po  it.po  ja.po  nl.po  pl.po  pt.po  ru.po  sk.po  sv.po  templates.pot
po/: UnixCW.po
src/: Makefile.am  Makefile.in  config.h.in
src/cw/: Makefile.am  Makefile.in  cw.1  cw.c  cw.h  demo.cw  prelude.cw  test.cw
src/cwcp/: Makefile.am  Makefile.in  cwcp.1  cwcp.c
src/cwgen/: Makefile.am  Makefile.in  cwgen.1  cwgen.c
src/cwutils/: Makefile.am  Makefile.in  cmdline.c  cmdline.h  cw_common.c  cw_common.h  cw_copyright.h  cw_words.h  dictionary.c  dictionary.h  i18n.c  i18n.h  memory.c  memory.h
src/libcw/: Makefile.am  Makefile.in  cw.7  include.awk  libcw.3.m4  libcw.c  libcw.h  libcw.pc.in  libcw_alsa.c  libcw_alsa.h  libcw_console.c  libcw_console.h  libcw_data.c  libcw_data.h  libcw_debug.c  libcw_debug.h  libcw_gen.c  libcw_gen.h  libcw_key.c  libcw_key.h  libcw_null.c  libcw_null.h  libcw_oss.c  libcw_oss.h  libcw_pa.c  libcw_pa.h  libcw_rec.c  libcw_rec.h  libcw_signal.c  libcw_signal.h  libcw_test.c  libcw_test.h  libcw_test_internal.c  libcw_test_public.c  libcw_test_simple_gen.c  libcw_tq.c  libcw_tq.h  libcw_utils.c  libcw_utils.h  libdoc.awk  (+3 more)
src/xcwcp/: Makefile.am  Makefile.in  application.cc  application.h  display.cc  display.h  main.cc  moc_application.cc  modeset.cc  modeset.h  receiver.cc  receiver.h  sender.cc  sender.h  xcwcp.1
src/xcwcp/icons/: icon_mini_xcwcp.xpm  icon_start.xpm  icon_stop.xpm
